fix: main: Fixed so searching meters doesn't mess with location. Fixed scrolling of meter list on mobile devices.

--- a/src/main/main.less
+++ b/src/main/main.less
@@ -135,6 +135,8 @@ main {
 @media screen and (max-width: @screen-sm) {
   .usermeters-list {
     transform: translate3d(0, 100%, 0);
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     &.mry-visible { transform: translate3d(0, 0, 0); }
   }
